kubernetes-bdp/kubernetes-bdp/hadoop/journalnode.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-journalnode
  namespace: default
spec:
  selector:
    app: journalnode
  clusterIP: None
  ports:
    - name: journalnode-port
      port: 8485
      targetPort: 8485
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: journalnode
spec:
  serviceName: bdp-private-journalnode
  replicas: 3
  template:
    metadata:
      labels:
        app: journalnode
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - journalnode
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: k8sjournalnode
        imagePullPolicy: Always
        image: 10.16.0.144:5000/hadoop-online/hadoop-online-bdp-private-v1.0:20190523180009
        command: ["bash", "-c", "/export/servers/monit/bin/monit -I"]
        volumeMounts:
        - name: journalnode-datadir
          mountPath: /export/Data
        resources:
          requests:
            cpu: 2000m
            memory: 8192Mi
          limits:
            cpu: 2000m
            memory: 8192Mi
  volumeClaimTemplates:
  - metadata:
      name: journalnode-datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: journalnode-storage-class
      resources:
        requests:
          storage: 500Gi
