kubernetes-bdp/kubernetes-bdp/hadoop/namenode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namenode-0
  labels:
    name: namenode-0
spec:
  ports:
  - port: 50070
    targetPort: 50070
  selector:
    statefulset.kubernetes.io/pod-name: namenode-0
apiVersion: v1
kind: Service
metadata:
  name: namenode-1
  labels:
    name: namenode-1
spec:
  ports:
  - port: 50070
    targetPort: 50070
  selector:
    statefulset.kubernetes.io/pod-name: namenode-1
