kubernetes-bdp/kubernetes-bdp/hadoop/resourcemanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcemanager-0
  labels:
    name: resourcemanager-0
spec:
  ports:
  - port: 8088
    targetPort: 8088
  selector:
    statefulset.kubernetes.io/pod-name: resourcemanager-0
apiVersion: v1
kind: Service
metadata:
  name: resourcemanager-1
  labels:
    name: resourcemanager-1
spec:
  ports:
  - port: 8088
    targetPort: 8088
  selector:
    statefulset.kubernetes.io/pod-name: resourcemanager-1
