kubernetes-bdp/kubernetes-bdp/hadoop/stateful-namenode.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-namenode
  namespace: default
spec:
  selector:
    name: namenode
  clusterIP: None
  ports:
    - name: namenode-port
      port: 8020
      targetPort: 8020
  selector:
    app: namenode
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: namenode
spec:
  serviceName: bdp-private-namenode
  replicas: 2
  template:
    metadata:
      labels:
        app: namenode
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - namenode
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: k8snamenode
        imagePullPolicy: Always
        image: 10.16.0.144:5000/hadoop-online/hadoop-online-bdp-private-v1.0:20190523175836
        command: ["bash", "-c", "/export/servers/monit/bin/monit -I"]
        volumeMounts:
        - name: namenode-datadir
          mountPath: /export/Data
        resources:
          requests:
            cpu: 8000m
            memory: 20480Mi
          limits:
            cpu: 8000m
            memory: 20480Mi
  volumeClaimTemplates:
  - metadata:
      name: namenode-datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: namenode-storage-class
      resources:
        requests:
          storage: 500Gi
